Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-9883

mysqldump does not support --default-character-set=auto

Details

    Description

      mysql, mysqladmin, mysqlshow and mysqlcheck support a command line option --default-character-set=auto, which means to detect character set from the underlying OS settings (e.g. from the current locale on Unix).

      mysqldump does not support this options and returns an error:

      $ mysqldump --default-character-set=auto
      mysqldump: Character set 'auto' is not a compiled character set and is not specified in the '/usr/share/mariadb/charsets/Index.xml' file
      

      It should be fixed to support "auto", like the other tools do.

      Attachments

        Activity

          Transition Time In Source Status Execution Times
          Anel Husakovic made transition -
          Open Confirmed
          1162d 20h 30m 1
          Anel Husakovic made transition -
          Confirmed In Review
          10s 1
          Anel Husakovic made transition -
          In Review Stalled
          81d 2h 55m 1
          Anel Husakovic made transition -
          Stalled In Review
          14s 1
          Anel Husakovic made transition -
          In Review Closed
          10d 30m 1

          People

            anel Anel Husakovic
            bar Alexander Barkov
            Votes:
            1 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Git Integration

                Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.