MDEV-9883: mysqldump does not support default-character-set=auto

This patch is used to enable `--default-character-set=auto` for mysqldump.